force-app/main/default/objects/Student__c/fields/Address_line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_line_1__c</fullName>
    <label>Address line 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>