force-app/main/default/objects/Student__c/fields/Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Blood_Group__c</fullName>
    <label>Blood Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>A RhD positive (A+)</fullName>
            </value>
            <value>
                <fullName>A RhD negative (A-)</fullName>
            </value>
            <value>
                <fullName>B RhD positive (B+)</fullName>
            </value>
            <value>
                <fullName>B RhD negative (B-)</fullName>
            </value>
            <value>
                <fullName>O RhD positive (O+)</fullName>
            </value>
            <value>
                <fullName>O RhD negative (O-)</fullName>
            </value>
            <value>
                <fullName>AB RhD positive (AB+)</fullName>
            </value>
            <value>
                <fullName>AB RhD negative (AB-)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>