force-app/main/default/objects/Student__c/fields/Enrollment_Number__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Number__c</fullName>
    <label>Enrollment Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>