force-app/main/default/objects/Student__c/fields/Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level__c</fullName>
    <label>Grade Level</label>
    <length>18</length>
    <type>Text</type>
</CustomField>