force-app/main/default/objects/Student__c/fields/Guardian_Name__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Name__c</fullName>
    <label>Guardian Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>