force-app/main/default/objects/Student__c/fields/Parent_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contact_Information__c</fullName>
    <label>Parent Contact Information</label>
    <type>TextArea</type>
</CustomField>