force-app/main/default/objects/Student__c/fields/Postal_code__c.field-meta.xml
<CustomField>
    <fullName>Postal_code__c</fullName>
    <label>Postal code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>