force-app/main/default/objects/Student__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <label>Profile</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
                <default>true</default>
                <label>Student</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>