force-app/main/default/objects/Student__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <length>20</length>
    <type>Text</type>
</CustomField>