force-app/main/default/objects/Student__c/fields/Relationships__c.field-meta.xml
<CustomField>
    <fullName>Relationships__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationships</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>