force-app/main/default/objects/Student__c/fields/Sibling1__c.field-meta.xml
<CustomField>
    <fullName>Sibling1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sibling1</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>