force-app/main/default/objects/Student__c/fields/Sibling2__c.field-meta.xml
<CustomField>
    <fullName>Sibling2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sibling2</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Students (Sibling2)</relationshipLabel>
    <relationshipName>Students1</relationshipName>
    <type>Lookup</type>
</CustomField>