force-app/main/default/objects/Student__c/validationRules/Validation_On_Roll_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_On_Roll_Number</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(  TEXT(Roll_Number__c) ) &lt; 7</errorConditionFormula>
    <errorDisplayField>Roll_Number__c</errorDisplayField>
    <errorMessage>Please enter 7 digit Rollnumber.</errorMessage>
</ValidationRule>